# git-lineage

./: .codecov.yml  .gitignore  .gitmodules  ASSESSMENT.md  CLAUDE.md  Cargo.toml  EVENT-DRIVEN.md  FILE-TREE.md  FIX-THIS-SHIT.md  Makefile  NEW-STATE-MODEL.md  README.md  SAME-LINE.md  SEARCH_PERFORMANCE_ANALYSIS.md  SPEC.md  TECH-SPEC.md  TESTING.md  TODO.md  after_escape.txt  after_slash.txt  after_typing.txt  before_search.txt  regenerate_expected.sh  screenshot_default.txt  screenshot_history.txt  screenshot_search.txt  test1_result.json  test2_result.json  test3_result.json  test_diff_persistence.sh  test_executor.sh  test_search_behavior.sh  test_search_perf.sh  update_script_screenshots.sh  update_test_screenshots.sh
.github/workflows/: ci.yml
src/: app.rs  async_task.rs  cli.rs  command.rs  config.rs  error.rs  event.rs  executor.rs  git_utils.rs  headless_backend.rs  lib.rs  line_mapping.rs  main.rs  main_lib.rs  navigator.rs  screenshot.rs  test_config.rs  test_runner.rs  theme.rs  tree.rs  ui.rs
src/event/: code_inspector.rs  file_loader.rs  history.rs  inspector.rs  mod.rs  navigation.rs  navigator.rs
test_configs/: history_panel.json  loading_state.json  search_mode.json
tests/: README.md  basic_navigation.test  cancellation_tests.rs  debug_search.test  debug_search_comparison.test  debug_search_detailed.test  debug_search_display.test  debug_search_structure.test  main_tests.rs  rendering_tests.rs  script_tests.rs  search_backspace_test.test  search_bug.test  search_empty_bug.test  search_enter_bug.test  search_functionality.test  timing_control.test
tests/rendering_tests/: default_navigator.expected.txt  default_navigator.json  history_focused.expected.txt  history_focused.json  inspector_diff.expected.txt  inspector_diff.json  loading_state.expected.txt  loading_state.json  search_active.expected.txt  search_active.json
tests/scripts/search_label_immediate/: script  (+7 more)
tools/: rebuild-screenshots
(+43 files in other folders)
