[package]
name = "git-lineage"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
gix = "0.66"
tokio = { version = "1.0", features = ["full"] }
syntect = "5.2"
tui-tree-widget = "0.22"
similar = "2.6"
fuzzy-matcher = "0.3"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ignore = "0.4"

[dev-dependencies]
# Testing framework enhancements
tokio-test = "0.4"         # Async testing utilities
mockall = "0.12"           # Mocking framework
proptest = "1.4"           # Property-based testing
tempfile = "3.0"           # Temporary test directories
assert_matches = "1.5"     # Enhanced pattern matching
serial_test = "3.0"        # Serial test execution
fake = "2.9"               # Fake data generation
maplit = "1.0"             # Collection macros
